syntax = "proto3";

package admins;

service AdminsService {
    rpc CreateOwner (CreateRoleDto) returns (OkAdminsResponse) {}
    rpc CreateModerator (CreateRoleDto) returns (OkAdminsResponse) {}
    rpc GetAllAccountsByuserId (GetAllRolesDto) returns (ResponseAllAccounts) {}
    rpc DeleteModerator (DeleteRoleDto) returns (OkAdminsResponse) {}
    rpc RefreshRoleToken (RefreshRoleTokenDto) returns (OkAdminsResponse) {}
}


message CreateRoleDto {
    int32 userId = 1;
    string role = 2;
}

message GetAllRolesDto {
    int32 userId = 1;
}  

message DeleteRoleDto {
    int32 deleteId = 1;
    int32 userId = 2;
}

message OkAdminsResponse {
    string message = 1;
    string token = 2;
}

message AccountDto {
    UserDto userId = 1;
    SchoolDto school = 2;
    int32 id = 3;
    string createAt = 4;
    string updateAt = 5;
    string role = 6;
}

message ResponseAllAccounts {
    repeated AccountDto accounts = 1;
}

message RefreshRoleTokenDto {
    string role = 1;
    int32 userId = 2;
    int32 schoolId = 3;
}

message UserDto {
    int32 id = 1;
    string name = 2;
    string middlename = 3;
    string surname = 4;
    string createAt = 5;
    string updateAt = 6; 
    string email = 7;
    string avatar = 8;
    bool isActivated = 9;
    bool blocked = 10;
    string blockedDescription = 11;
}

message SchoolDto {
    string name = 1;
    string avatarUrl = 2;
    string location = 3;
    string licenseNumber = 4;
    string licenseImg = 5;
    AccountDto owner = 6;
    string pointsSystem = 7;
    string ip = 8;
    string region = 9;
    bool IsActivated = 10;
    bool blocked = 11;
}